example/k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: dex
  name: dex
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dex
    spec:
      containers:
      - image: quay.io/ericchiang/poke
        name: dex
        command:
        - "/poke"
        - "serve"
        - "/dex/config.yaml"
        ports:
        - containerPort: 5556
          name: worker-port

        volumeMounts:
        - name: config-volume
          mountPath: /dex
      volumes:
      - name: config-volume
        configMap:
          name: dex-config
