example/k8s/dex-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  ports:
    - name: dex
      port: 5556
  selector:
    app: dex
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dex
spec:
  tls:
  - secretName: dex.example.com.tls
    hosts:
    - dex.example.com
  rules:
  - host: dex.example.com
    http:
      paths:
      - backend:
          serviceName: dex
          servicePort: 5556
        path: /
